# localWaves

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
src/: main.cpp
src/gui/: MainWindow.cpp  MainWindow.hpp
src/server/: HttpConnection.cpp  HttpConnection.hpp  HttpServer.cpp  HttpServer.hpp  MimeTypes.hpp
src/utils/: NetworkUtils.hpp
tests/: TestLocalWaves.cpp
